RESOLVED FIXED285301
[GStreamer] Fix mock video sources observed framerate display
https://bugs.webkit.org/show_bug.cgi?id=285301
Summary [GStreamer] Fix mock video sources observed framerate display
Philippe Normand
Reported 2025-01-02 08:11:55 PST
.
Attachments
Philippe Normand
Comment 1 2025-01-02 08:15:14 PST
EWS
Comment 2 2025-01-09 02:42:37 PST
Committed 288651@main (cac194f74a21): <https://commits.webkit.org/288651@main> Reviewed commits have been landed. Closing PR #38463 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-01-09 02:43:15 PST
Note You need to log in before you can comment on or make changes to this bug.