Cherry-pick 288651@main (cac194f74a21). https://bugs.webkit.org/show_bug.cgi?id=285301

[GStreamer] Fix mock video sources observed framerate display
    https://bugs.webkit.org/show_bug.cgi?id=285301

    Reviewed by Xabier Rodriguez-Calvar.

    The observed framerate is computed using frames PTS values, but the frames constructed by the mock
    sources had invalid PTS values. Fix this by using the buffer PTS in case an invalid timestamp was
    passed to the create() functions. This was done already for createWrappedSample() but not for the
    create() function.

    * Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
    (WebCore::presentationTimeFromSample):
    (WebCore::VideoFrameGStreamer::create):
    (WebCore::VideoFrameGStreamer::createWrappedSample):

    Canonical link: https://commits.webkit.org/288651@main

Canonical link: https://commits.webkit.org/282416.419@2.46-jan-2025-multimedia